# htmlify

./: .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  TrimmingBBCodes.h  handleSpecialChars.h  htmlify.cbp  htmlifyPostProcessors.h  main.cpp  readme.md
.github/workflows/: alpine.yml  alpine_arm.yml  clang.yml  gcc.yml  msys2.yml
htmlify/: CMakeLists.txt  TrimmingBBCodes.hpp  handleSpecialChars.hpp  htmlify.cbp  htmlifyPostProcessors.hpp  main.cpp
